test/libyul/yulSyntaxTests/if_statement_invalid_1.yul
{
    if mload {}
}
// ----
// ParserError 7104: (9-14='mload'): Builtin function "mload" must be called.
